set up intents to transfer from MenuActivity to GameActivity (not connection stuff though)